fix(participant-menu-list): participant menu list was not visible in virtualised list
for participant count > 11, menu item list was not visible for last participant in the list

--- a/packages/core/src/components/rtk-participant/rtk-participant.css
+++ b/packages/core/src/components/rtk-participant/rtk-participant.css
@@ -47,5 +47,5 @@ rtk-icon.more {
 }
 
 #menu-list {
-  @apply absolute !top-8 !right-4 z-20;
+  @apply absolute z-20;
 }
